fix: [Diego] novos endpoints atualizados para crud de 3 tabelas
